# config

./: .gitlab-ci.yml  CHANGELOG.md  Makefile  config.cabal  flake.nix  hie.yaml  shell.nix
nix/: overlays.nix  pkgs.nix
src/Config/: HKD.hs
