cabal-version:      2.4
name:               config
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Felix Leitz
maintainer:         felix.leitz92@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Config.HKD
    other-modules:
    ghc-options:      -Wall
                      -O2
                      -haddock
    build-depends:    base
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
    
-- test-suite config-test
--   type:             exitcode-stdio-1.0
--   main-is:          Spec.hs
--   other-modules:    
--   hs-source-dirs:   test
--   ghc-options:      -Wall
--   build-depends:    base
--                   , containers
--                   , hspec
--                   , config
--                   , time
--                   , quickcheck-instances
--                   , QuickCheck
--   default-language: Haskell2010